# endpoint

./: .gitignore  .pre-commit-config.yaml  README.md
.github/cikit/: .gitignore  README.md  pyproject.toml
.github/cikit/src/cikit/: __init__.py
.github/workflows/: endpoint.readit.enqueue.yml  pull.on_default_branch.yml  svc.url_enqueue.yml
etc/example/: entrypoint.config.toml
server/: .envrc  .gitignore  .pre-commit-config.yaml  pyproject.toml
server/etc/: github.env
server/etc/example/: endpoint.config.toml
server/src/endpoint/: __init__.py
server/src/endpoint/readit/: core.py
server/src/endpoint/readit/app/: send.py  send_to_personal.py  send_to_queue_v2.py  summarize_other.py
server/src/endpoint/readit/sink/: personal.py  queue_v2.py
src/endpoint/: __init__.py
