[project]
name = "endpoint"
version = "0.1.0"
authors = [
    { name = "Jonghyun Park", email = "parjong@gmail.com" }
]
requires-python = "==3.14.*"
dependencies = [
    "arxiv>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "click==8.3.*",
    "gql[requests]==4.0.*",
    "langchain-google-genai>=4.2.0",
    "pydantic>=2.12.5",
]

[project.scripts]
endpoint-readit-summarize-other = "endpoint.readit.app.summarize_other:main"
endpoint-readit-send-to-personal = "endpoint.readit.app.send_to_personal:main"
endpoint-readit-send-to-queue-v2 = "endpoint.readit.app.send_to_queue_v2:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff==0.14.10",
]
